--- a/app/src/main/res/layout/activity_foodmap.xml
+++ b/app/src/main/res/layout/activity_foodmap.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FoodMap">
+    tools:context=".FoodMapActivity">
 
-    <ListView
-        android:id="@+id/list_sample"
+    <fragment
+        android:id="@+id/googleMap"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        ></ListView>
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.SupportMapFragment" />
 
 </LinearLayout>
