--- a/app/src/main/res/layout/activity_realrevw.xml
+++ b/app/src/main/res/layout/activity_realrevw.xml
@@ -1,15 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".RealRevw">
+    android:layout_height="match_parent">
 
-
-    <ListView
-        android:id="@+id/list_sample"
+    <TextView
+        android:id="@+id/writeEditText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="후기를 입력하고 싶다면 쓰고자 하는 음식의 카테고리를 분류한 후 \n              스페이스 바를 누르고 이동 버튼을 눌러주세요" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/submitReviewButton"
+        android:layout_width="wrap_content"
+        android:layout_height="55dp"
+        android:layout_below="@id/writeEditText"
+        android:layout_toEndOf="@id/categorySpinner"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="13dp"
+        android:layout_marginStart="10dp"
+        android:text="이동" />
+
+    <Spinner
+        android:id="@+id/categorySpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/writeEditText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reviewRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/submitReviewButton"
+        android:layout_marginTop="16dp"
+        android:padding="16dp"
+        android:background="@drawable/recyclerview_border" />
+
+</RelativeLayout>
+
+
+
+
