--- a/app/src/main/res/layout/activity_foodmap.xml
+++ b/app/src/main/res/layout/activity_foodmap.xml
@@ -24,13 +24,15 @@
 
     <ImageButton
         android:id="@+id/btnMyLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
         android:background="@android:color/transparent"
-        android:src="@android:drawable/ic_menu_mylocation" />
+        android:src="@android:drawable/ic_menu_mylocation"
+        android:scaleType="fitCenter" />
+
 
 </RelativeLayout>
